# cubicgen

./: CMakeLists.txt  cubicgen.cpp  cubicgen.hpp  sample.cpp
